docs: expand troubleshooting documentation with production-ready guides (6400+ lines)
Expand all remaining troubleshooting files with comprehensive diagnostic procedures and solutions:

- 03-common-issues.md: 1650 lines - Application, database, deployment, network, performance, security issues
- 04-diagnostic-procedures.md: 1031 lines - Systematic troubleshooting procedures with step-by-step commands
- 05-performance-debugging.md: 785 lines - CPU/memory profiling, database optimization, bottleneck analysis
- 06-security-troubleshooting.md: 666 lines - Authentication/authorization, SSL/TLS, credentials, vulnerabilities
- 07-database-troubleshooting.md: 737 lines - Connections, queries, consistency, backup/recovery, replication
- 08-network-troubleshooting.md: 595 lines - DNS, service communication, external APIs, ports, load balancing
- 09-deployment-troubleshooting.md: 726 lines - Build failures, container startup, Docker Compose, migrations

Each file includes:
- Real-world error symptoms and root causes
- Diagnostic step-by-step procedures
- Specific commands for Docker/PostgreSQL/Spring Boot
- Code examples showing before/after patterns
- Configuration fixes for Gym Platform architecture

Troubleshooting section now complete with 6400+ lines of production documentation.